--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </nav>
 
     <!--Background Image-->
-    <div class="bg-image d-flex justify-content-center align-items-center" style="background-image: url(../assets/backg-image.jpg) ; height: 100vh;">
+    <div class="bg-image d-flex justify-content-center align-items-center" style="background-image: url(/assets/backg-image.jpg) ; height: 100vh;">
 
         <div class="row" style="margin-left:20px; margin-right: 20px;">
             <div class="col-sm-4 mb-3 mb-sm-0">
